--- a/Hosting/ND.MCJ.WebApi/Web.config
+++ b/Hosting/ND.MCJ.WebApi/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=192.168.1.230;Initial Catalog=MoChouJun;User ID=sa;Password=123QWEasdZXC;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=192.168.31.106;Initial Catalog=MCJ;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--NLog日志配置文件路径-->
