--- a/Infrastructure/ND.MCJ.Framework/ND.MCJ.Framework.csproj
+++ b/Infrastructure/ND.MCJ.Framework/ND.MCJ.Framework.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter\ConvertJson.cs" />
-    <Compile Include="DataConvert.cs" />
+    <Compile Include="Converter\DataConvert.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Encryption.cs" />
     <Compile Include="HttpHelper.cs" />
