--- a/Hosting/ND.MCJ.WebApi/ND.MCJ.WebApi.csproj
+++ b/Hosting/ND.MCJ.WebApi/ND.MCJ.WebApi.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Filters\ValidataModelAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
